--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ subprojects {
 		mavenCentral()
 		
 	    dependencies {
-			javacc 'net.java.dev.javacc:javacc:7.0.2'
+			javacc 'net.java.dev.javacc:javacc:7.0.5'
+//			javacc 'net.java.dev.javacc:javacc:7.0.2'
 //			javacc 'net.java.dev.javacc:javacc:8.0.0'
 	    }
 	}
